--- a/faqs.html
+++ b/faqs.html
@@ -23,12 +23,12 @@
                 <img src="./images/logo-min.jpg" alt="Logo Inmobiliaria Grupo De Bella">
                </div>
                
-               <div class="nav">   
+               <div class="nav">
+                    <div><a href="index.html" target="blank">Home</a></div>   
                     <div><a href="#">La Empresa</a></div>
                     <div><a href="#">Propiedades</a></div>
-                    <div><a href="#">Emprendimientos</a></div>
-                    <div><a href="faqs.html" target="blank">Preguntas Frecuentes</a></div>
-                    <div><a href="contacto.html" target="blank">Contacto</a></div>
+                    <div><a href="#">Tasaciones</a></div>
+                    <div><a href="#">Contacto</a></div>
                 </div>
 
                <div class="rrss">
@@ -65,6 +65,10 @@
       <footer class="footer">
           <div class="pie"><p>Honorio Pueyrredon 755 C. A. B. A. - Consultas al 4981-2555 / 4983-3432</p></div>
       </footer>
+
+      <section></section>
+
+
 
    </div>  <!-- fin div padre  -->
     
